Fix double scrollbar in Firefox

--- a/add-on/src/options/options.css
+++ b/add-on/src/options/options.css
@@ -2,13 +2,11 @@ html.is-chrome {
   overflow: hidden;
 }
 .is-chrome body {
+  margin: 0;
   min-width: 650px;
   height: 450px;
   padding: 15px;
   overflow-y: auto;
-}
-body {
-  margin: 0;
 }
 form * {
   font: caption;
